# Advanced-Algebra-Midterm-Experiment

./: .gitignore  README.md  pyproject.toml
docs/: research_log.md  research_plan.md
experiments/: exp_1d_condition_number.py  exp_1d_lambda_selection.py  exp_2d_image_recovery.py  exp_filter_factors.py
report/: references.bib  report.md
results/: exp_1d_condition_number.csv  exp_1d_condition_number.json  exp_1d_lambda_selection.csv  exp_1d_lambda_selection.json  exp_2d_image_recovery.csv  exp_2d_image_recovery.json  exp_filter_factors.json
src/: __init__.py  config.py  metrics.py  operators.py  plotting.py  solvers.py
